# final-project-assignment-app-vizdr

./: LICENSE  README.md
Socket_CAN_Receiver/: CMakeLists.txt
Socket_CAN_Receiver/src/: can_server.c
Socket_CAN_Sender/: CMakeLists.txt
Socket_CAN_Sender/src/: can_send_detection  can_send_detection.c
